--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,297 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  background-color: black;
+  width: 200px;
+  height: 4em;
+  font-size: 14px;
+  font-weight: bold;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.fluid-container {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  max-width: 860px;
+}
+
+.col-4 {
+  box-sizing: border-box;
+  width: 33.33%;
+}
+
+.col-6 {
+  width: 50%;
+  box-sizing: border-box;
+}
+
+.col-3 {
+  box-sizing: border-box;
+  width: 25%;
+}
+
+.col-8 {
+  box-sizing: border-box;
+  width: 66.6%;
+}
+
+.col-12 {
+  width: 100%;
+}
+
+/*Header*/
+header {
+  padding: 10px 0;
+}
+
+header .logo {
+  padding-left: 40px;
+  text-align: right;
+}
+
+header .logo img {
+
+  width: 202px;;
+}
+
+.nav-bar ul {
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+}
+
+.nav-bar a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: black;
+}
+
+.nav-bar li:last-child a {
+  text-transform: none;
+}
+
+/*Main hero*/
+.main-hero {
+  background-color: #495E57;
+  height: 400px;
+  overflow-y: visible;
+  margin-bottom: 100px;;
+  color: white;
+}
+
+.main-hero .container {
+  height: 100%;
+}
+
+.main-hero .img {
+  text-align: right;
+}
+
+.main-hero img {
+  width: 375px;
+  height: 450px;
+  margin-top: 20px;
+  border-radius: 20px;
+}
+
+.main-hero h1 {
+  font-size: 60px;
+  font-weight: normal;
+  margin-bottom: 0;
+  margin-top: 20px;
+}
+
+.main-hero h3 {
+  font-size: 25px;
+  font-weight: normal;
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+
+.main-hero div.container {
+  background-color: #495E57;
+  justify-content: space-evenly;
+}
+
+.main-hero buttons {
+  margin-top: 50px;
+  margin-left: 20px;
+}
+
+/*Specials*/
+.specials h2 {
+  font-size: 40px;
+  font-weight: normal;
+  width: 50%;
+}
+
+.specials button {
+  margin-top: 40px;
+  margin-left: 150px
+}
+
+.specials .container {
+  justify-content: space-between;
+}
+
+.specials .col-4 {
+  width: 265px;
+  background-color: #EDEFEE;
+  border-radius: 20px;
+}
+
+.specials img {
+  width: 100%;
+  height: 185px;
+  border-radius: 20px 20px 0 0;
+}
+
+.specials h5 {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+}
+
+.specials span {
+  color: #EE9972;
+  margin-left: auto;
+}
+
+.specials p {
+  height: 200px;
+  margin: 20px 20px auto 20px;
+  opacity: .7;
+}
+
+.specials a {
+  display: flex;
+  margin: auto 20px 20px 20px;
+  color: black;
+  text-decoration: none;
+}
+
+.specials a img {
+  width: 20px;
+  height: auto;
+}
+
+/*Testimonials*/
+.testimonials {
+  background-color: #EDEFEE;
+  margin-top: 100px;
+
+}
+
+.testimonials .container {
+  justify-content: space-between;
+}
+
+.testimonials .comment {
+  background-color: white;
+  width: 24%;
+  margin-bottom: 200px;
+}
+
+.testimonials h2 {
+  font-size: 40px;
+  font-weight: normal;
+  text-align: center;
+  width: 100%;
+  margin-top: 140px;
+  margin-bottom: 80px;
+}
+
+.testimonials .persona {
+  display: flex;
+}
+
+.testimonials h6 {
+  width: 100%;
+  margin: 20px auto 5px 10px;
+}
+
+.testimonials img {
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
+}
+
+.testimonials span {
+  display: flex;
+  margin-left: 10px;
+}
+
+.testimonials p {
+  margin-left: 10px;
+}
+
+/*Description*/
+.description .container {
+  justify-content: space-between;
+  margin-top: 150px;
+}
+
+.description h2 {
+  font-size: 40px;
+  font-weight: normal;
+  margin-bottom: 0;
+}
+
+.description h3 {
+  font-size: 25px;
+  font-weight: normal;
+  margin-top: 5px;
+}
+
+.description p {
+  margin-bottom: 250px;
+  text-align: justify;
+}
+
+.description img {
+  width: 300px;
+}
+
+.description .image-box {
+  position: relative;
+  text-align: right;
+}
+
+.description img:first-child {
+  position: absolute;
+  top: 25%;
+  right: 40%;
+  z-index: -1;
+}
+
+/*Footer*/
+footer {
+  background-color: #EDEFEE;
+}
+
+footer .container {
+  margin-top: 80px;
+}
+
+footer img {
+  margin-top: 30px;
+}
+
+footer h6 {
+  font-size: 15px;
+  color: #495E57;
+}
+
+footer ul {
+  list-style: none;
+  padding: 0;
+}
+
+footer a {
+  color: black;
+  text-decoration: none;
 }
